fixed search by rating issue